RESOLVED FIXED242902
Mute microphone capture if starting capture fails due to low priority error
https://bugs.webkit.org/show_bug.cgi?id=242902
Summary Mute microphone capture if starting capture fails due to low priority error
youenn fablet
Reported 2022-07-19 08:29:35 PDT
Mute microphone capture if starting capture fails due to low priority error
Attachments
Radar WebKit Bug Importer
Comment 1 2022-07-19 08:29:51 PDT
youenn fablet
Comment 2 2022-07-19 08:52:13 PDT
EWS
Comment 3 2022-07-20 01:26:16 PDT
Committed 252642@main (a0fc359902ed): <https://commits.webkit.org/252642@main> Reviewed commits have been landed. Closing PR #2546 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.