Cherry-pick a0fc359902ed. rdar://problem/97261242

Mute microphone capture if starting capture fails due to low priority error
    https://bugs.webkit.org/show_bug.cgi?id=242902
    rdar://problem/97261242

    Reviewed by Eric Carlson.

    * Source/WebCore/platform/mediastream/mac/BaseAudioSharedUnit.cpp:
    (WebCore::BaseAudioSharedUnit::startProducingData):
    (WebCore::BaseAudioSharedUnit::startUnit):
    We sometimes try to restart microphone capture when being foregrounded and not muted by the application.
    In that case, if the microphone is already in use by a higher priviledged application (Siri or phone app for instance), the capture will fail.
    Instead of failing the capture, when we receive an error message about priority being not high enough, we use the suspend code path to mute microphone capture.

    Canonical link: https://commits.webkit.org/252642@main

Canonical link: https://commits.webkit.org/252432.48@safari-7614-branch